--- a/responsive.css
+++ b/responsive.css
@@ -49,7 +49,7 @@
 /* Hero Section */
 @media (max-width:900px) {
     .hero{
-        background-image: url('/assets/images/hero-small-image.jpg');
+        background-image: url('https://raw.githubusercontent.com/MrFox-3X/ShopX/refs/heads/main/hero-small-image.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: calc(100% - 40%);
